--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
+        "@vuepress/plugin-pwa": "^2.0.0-beta.45",
         "dprint": "0.29.1",
         "husky": "^8.0.1",
         "vuepress": "^2.0.0-beta.45"
